Update location from "TBH" to "Two Saints Tavern" for Social event in index.html

--- a/neurohack/index.html
+++ b/neurohack/index.html
@@ -229,7 +229,7 @@ function showSection(sectionId) {
                 <tr>
                     <td>4:00 PM</td>
                     <td>Social!</td>
-                    <td>TBH</td>
+                    <td>Two Saints Tavern (52 Gainsborough St)</td>
                 </tr>
             </tbody>
         </table>
