full capacity - shut down registration link

--- a/neurohack/index.html
+++ b/neurohack/index.html
@@ -350,7 +350,7 @@ function showSection(sectionId) {
         <div class="hero-subtitle">
             Registration Form
         </div>
-        <p>To register, please click the following Google Form link:</p>
+        <p>We are at full capacity and can no longer accept new registrations.:</p>
         <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSf6tU2W8s-aFSBQ2rEyT11gdLyvKyqnULYjNoTF_iQBEF5WCw/viewform" target="_blank" style="color: #2c5aa0; text-decoration: underline; font-weight: bold;">Registration</a></p>
     </div>
 </section>
