Added room info for Cury

--- a/neurohack/index.html
+++ b/neurohack/index.html
@@ -309,7 +309,7 @@ function showSection(sectionId) {
         <h1>Location</h1>
         <div class="image-subtitle">
             Boston Precision Brain & Mental Health Hack 2025 will take place at two locations
-            on Northeastern University's campus (Curry Student Center 2nd Floor suites and Egan Research Center room 440)
+            on Northeastern University's campus (Curry Student Center 2nd Floor room number 228 and Egan Research Center room 440)
             and virtually over Zoom
         </div>
 
