--- a/neurohack/index.html
+++ b/neurohack/index.html
@@ -469,11 +469,21 @@ function showSection(sectionId) {
     <div class="hero-content">
         <h1>Volunteers</h1>
         <div class="hero-subtitle">
-            TBH
+            Our Dedicated Team
         </div>
-         <p style="text-align: justify; margin-bottom: 2rem;">
-             TBH
-     </p>
+        <p style="text-align: justify; margin-bottom: 2rem;">
+            We are grateful to the following volunteers who are contributing their time and expertise to make this event possible.
+        </p>
+        <ul style="list-style: none; padding: 0; margin: 0 auto; max-width: 600px; color: #333;">
+            <li style="padding: 0.5rem 0;">Charles Hillman</li>
+            <li style="padding: 0.5rem 0;">Jonathan Peelle</li>
+            <li style="padding: 0.5rem 0;">Laurel Gabard-Durnam</li>
+            <li style="padding: 0.5rem 0;">Ngozi Nnaeto</li>
+            <li style="padding: 0.5rem 0;">Shane Pracar</li>
+            <li style="padding: 0.5rem 0;">Sophie Engels</li>
+            <li style="padding: 0.5rem 0;">Valur Olafsson</li>
+            <li style="padding: 0.5rem 0;">Vito Quaranta</li>
+        </ul>
     </div>
 </section>
 
