Updated schedule with room number

--- a/neurohack/index.html
+++ b/neurohack/index.html
@@ -97,37 +97,37 @@ function showSection(sectionId) {
                 <tr>
                     <td>9:30 AM</td>
                     <td>Intro</td>
-                    <td>Curry Student Center, 2nd Floor Suites</td>
+                    <td>Curry Student Center, 2nd Floor Room number 228</td>
                 </tr>
                 <tr>
                     <td>10:00 AM</td>
                     <td>Project "speed dating" & Coffee</td>
-                    <td>Curry Student Center, 2nd Floor Suites</td>
+                    <td>Curry Student Center, 2nd Floor Room number 228</td>
                 </tr>
                 <tr>
                     <td>11:00 AM</td>
                     <td>Talk: Susan Whitfield-Gabrieli</td>
-                    <td>Curry Student Center, 2nd Floor Suites</td>
+                    <td>Curry Student Center, 2nd Floor Room number 228</td>
                 </tr>
                 <tr>
                     <td>12:00 PM</td>
                     <td>Lunch/ Finish "Speed dating"</td>
-                    <td>Curry Student Center, 2nd Floor Suites</td>
+                    <td>Curry Student Center, 2nd Floor Room number 228</td>
                 </tr>
                 <tr>
                     <td>1:00 PM</td>
                     <td>Talk: Don Robinaugh</td>
-                    <td>Curry Student Center, 2nd Floor Suites</td>
+                    <td>Curry Student Center, 2nd Floor Room number 228</td>
                 </tr>
                 <tr>
                     <td>2:00 PM</td>
                     <td>Open hacking</td>
-                    <td>Curry Student Center, 2nd Floor Suites</td>
+                    <td>Curry Student Center, 2nd Floor Room number 228</td>
                 </tr>
                 <tr>
                     <td>4:00 PM</td>
                     <td>Wrap up</td>
-                    <td>Curry Student Center, 2nd Floor Suites</td>
+                    <td>Curry Student Center, 2nd Floor Room number 228</td>
                 </tr>
             </tbody>
         </table>
@@ -148,27 +148,27 @@ function showSection(sectionId) {
                 <tr>
                     <td>9:00 AM</td>
                     <td>Open hacking</td>
-                    <td>Curry Student Center, 2nd Floor Suites</td>
+                    <td>Curry Student Center, 2nd Floor Room number 228</td>
                 </tr>
                 <tr>
                     <td>9:30 AM</td>
                     <td>Coffee & Open hacking</td>
-                    <td>Curry Student Center, 2nd Floor Suites</td>
+                    <td>Curry Student Center, 2nd Floor Room number 228</td>
                 </tr>
                 <tr>
                     <td>10:00 AM</td>
                     <td>Data blitz</td>
-                    <td>Curry Student Center, 2nd Floor Suites</td>
+                    <td>Curry Student Center, 2nd Floor Room number 228</td>
                 </tr>
                 <tr>
                     <td>11:00 AM</td>
                     <td>Open hacking</td>
-                    <td>Curry Student Center, 2nd Floor Suites</td>
+                    <td>Curry Student Center, 2nd Floor Room number 228</td>
                 </tr>
                 <tr>
                     <td>12:00 PM</td>
                     <td>Lunch</td>
-                    <td>Curry Student Center, 2nd Floor Suites</td>
+                    <td>Curry Student Center, 2nd Floor Room number 228</td>
                 </tr>
                 <tr>
                     <td>1:30 PM onwards</td>
@@ -194,37 +194,37 @@ function showSection(sectionId) {
                 <tr>
                     <td>9:00 AM</td>
                     <td>Open hacking</td>
-                    <td>Curry Student Center, 2nd Floor Suites</td>
+                    <td>Curry Student Center, 2nd Floor Room number 228</td>
                 </tr>
                 <tr>
                     <td>9:30 AM</td>
                     <td>Coffee & Open hacking</td>
-                    <td>Curry Student Center, 2nd Floor Suites</td>
+                    <td>Curry Student Center, 2nd Floor Room number 228</td>
                 </tr>
                 <tr>
                     <td>10:00 AM</td>
                     <td>Talk: Satrajit Ghosh: An Intelligent Infrastructure as a Foundation for Modern Science</td>
-                    <td>Curry Student Center, 2nd Floor Suites</td>
+                    <td>Curry Student Center, 2nd Floor Room number 228</td>
                 </tr>
                 <tr>
                     <td>11:00 AM</td>
                     <td>Talk: Paola Pedrelli: Rethinking Psychiatry: From Diagnoses to Mechanisms of Change and Biomarkers</td>
-                    <td>Curry Student Center, 2nd Floor Suites</td>
+                    <td>Curry Student Center, 2nd Floor Room number 228</td>
                 </tr>
                 <tr>
                     <td>12:00 PM</td>
                     <td>Lunch</td>
-                    <td>Curry Student Center, 2nd Floor Suites</td>
+                    <td>Curry Student Center, 2nd Floor Room number 228</td>
                 </tr>
                 <tr>
                     <td>1:00 PM</td>
                     <td>Open hacking</td>
-                    <td>Curry Student Center, 2nd Floor Suites</td>
+                    <td>Curry Student Center, 2nd Floor Room number 228</td>
                 </tr>
                 <tr>
                     <td>3:00 PM</td>
                     <td>Presentations & Wrap-up</td>
-                    <td>Curry Student Center, 2nd Floor Suites</td>
+                    <td>Curry Student Center, 2nd Floor Room number 228</td>
                 </tr>
                 <tr>
                     <td>4:00 PM</td>
