--- a/neurohack/index.html
+++ b/neurohack/index.html
@@ -173,7 +173,7 @@ function showSection(sectionId) {
                 <tr>
                     <td>1:30 PM onwards</td>
                     <td>Open Hacking</td>
-                    <td>Egan Research Center room 440</td>
+                    <td>Egan Research Center, Room #440</td>
                 </tr>
             </tbody>
         </table>
@@ -309,7 +309,7 @@ function showSection(sectionId) {
         <h1>Location</h1>
         <div class="image-subtitle">
             Boston Precision Brain & Mental Health Hack 2025 will take place at two locations
-            on Northeastern University's campus (Curry Student Center 2nd Floor room number 228 and Egan Research Center room 440)
+            on Northeastern University's campus (Curry Student Center, 2nd Floor Suites, Room #228 and Egan Research Center, Room #440)
             and virtually over Zoom
         </div>
 
