--- a/neurohack/index.html
+++ b/neurohack/index.html
@@ -53,6 +53,9 @@ function showSection(sectionId) {
 <li class="nav_list">
 <a  href="#" onclick="showSection('volunteers')">Volunteers</a>
 </li>
+    <li class="nav_list">
+<a  href="#" onclick="showSection('resources')">Resources</a>
+</li>
 </ul>
 </div>
 <!-- /.navbar-collapse -->
@@ -487,5 +490,16 @@ function showSection(sectionId) {
     </div>
 </section>
 
+<section id="resources" class="content-section">
+    <div class="hero-content">
+        <h1>Resources</h1>
+        <div class="hero-subtitle">
+            Resources for the hackaton
+        </div>
+        <ul style="list-style: none; padding: 0; margin: 0 auto; max-width: 600px; color: #333;">
+            <li style="padding: 0.5rem 0;">Datasets: <a href="https://drive.google.com/drive/folders/1UINSKbKV73hrJ__5ycdQKOmAZjfykTIm?usp=sharing" target="_blank" rel="noopener noreferrer">https://drive.google.com/drive/folders/1UINSKbKV73hrJ__5ycdQKOmAZjfykTIm?usp=sharing</a></li>
+        </ul>
+    </div>
+</section>
 </body>
 </html>
