--- a/neurohack/index.html
+++ b/neurohack/index.html
@@ -498,6 +498,7 @@ function showSection(sectionId) {
         </div>
         <ul style="list-style: none; padding: 0; margin: 0 auto; max-width: 600px; color: #333;">
             <li style="padding: 0.5rem 0;">Datasets: <a href="https://drive.google.com/drive/folders/1UINSKbKV73hrJ__5ycdQKOmAZjfykTIm?usp=sharing" target="_blank" rel="noopener noreferrer">https://drive.google.com/drive/folders/1UINSKbKV73hrJ__5ycdQKOmAZjfykTIm?usp=sharing</a></li>
+            <li style="padding: 0.5rem 0;"><a href="https://drive.google.com/drive/folders/1RJkba41x52VBCyOBIq_bvAUTeomRVK_c" target="_blank" rel="noopener noreferrer">Submit your datablitz slide here</a></li>
         </ul>
     </div>
 </section>
