Added Masha's name to the volunteers, for the photos. Thanks Masha

--- a/neurohack/index.html
+++ b/neurohack/index.html
@@ -481,6 +481,7 @@ function showSection(sectionId) {
             <li style="padding: 0.5rem 0;">Charles Hillman</li>
             <li style="padding: 0.5rem 0;">Jonathan Peelle</li>
             <li style="padding: 0.5rem 0;">Laurel Gabard-Durnam</li>
+            <li style="padding: 0.5rem 0;">Masha Vodyanyk</li>
             <li style="padding: 0.5rem 0;">Ngozi Nnaeto</li>
             <li style="padding: 0.5rem 0;">Shane Pracar</li>
             <li style="padding: 0.5rem 0;">Sophie Engels</li>
